--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -12,17 +12,26 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    background-color: #f0f0f0;
 }
 
 .image-item {
-    width: 100px;
-    height: 100px;
+    width: 256px;
+    height: 256px;
     background-color: #f0f0f0;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid #ccc;
     cursor: pointer;
+    overflow: hidden;
+    flex-direction: column;
+}
+
+.image-item img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 .editor {
