--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -28,7 +28,7 @@ header {
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     width: 50%;
-    padding-right: 20px;
+    padding-right: 80px;
 }
 
 /* Image gallery item styling */
@@ -90,14 +90,14 @@ header {
 }
 
 /* Selected image styling */
-#selected-image-display {
+#selected-image-display  {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
 }
 
 /* Button styling */
-#edit-button, #save-edited-image-button {
+#edit-button{
     background-color: #007BFF;
     color: white;
     border: none;
@@ -107,7 +107,23 @@ header {
     transition: background-color 0.3s ease;
     width: 100%;
 }
-
+#save-edited-image-button  {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+#save-edited-image-button img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+#prompt-input {
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 90%;
+}
 #edit-button:hover, #save-edited-image-button:hover {
     background-color: #0056b3;
 }
